# nxtcore

./: .clang-format  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  LICENSE  README.md  TODO
code/: CMakeLists.txt  CMakeSettings.json
code/examples/: CRTP.h
code/include/: AVLTree.h  Array.h  BinarySearchTree.h  BinaryTree.h  Buffer.h  Command.h  CommandQueue.h  Common.h  CommonTree.h  Component.h  CompressedPair.h  Entity.h  EntityManager.h  Event.h  Export.h  GenericTask.h  GroupCommand.h  HOF.h  Key.h  List.h  Math.h  Maths.h  MultiArray.h  PageVector.h  PriorityQueue.h  Queue.h  RingBuffer.h  Search.h  SkipList.h  SlotMap.h  Sort.h  Stack.h  System.h  SystemManager.h  Task.h  TaskQueue.h  Tree.h  TypeTraits.h  Vector.h
code/include/Algorithm/: HOF.h  Search.h  Sort.h
code/include/Command/: Command.h  CommandQueue.h  GroupCommand.h
code/include/Container/: AVLTree.h  Array.h  BTree.h  BinarySearchTree.h  Buffer.h  CommonTree.h  Key.h  List.h  PriorityQueue.h  RingBuffer.h  SegmentTree.h  SkipList.h  Vector.h
code/include/ECS/: Component.h  EntityManager.h
code/include/Threading/: GenericTask.h  Task.h  (+2 more)
code/src/: CommandQueue.cpp  EntityManager.cpp  Event.cpp  GroupCommand.cpp  TaskQueue.cpp  dummy.cpp
code/tests/: AVLTreeTests.cpp  BinarySearchTreeTests.cpp  HOFTests.cpp  ListTests.cpp  MathTests.cpp  PermutationTests.cpp  PriorityQueueTests.cpp  RingBufferTests.cpp  SegmentTreeTests.cpp  SkipListTests.cpp  SortTests.cpp  StopWatchTests.cpp  TasksTests.cpp  VectorTests.cpp  visual_studio_catch2_adapter.runsettings  visual_studio_catch_adapter.runsettings
(+1 files in other folders)
